AEAD preference list overflow in 2.2
Closed, ResolvedPublic

Assigned To
Authored By
• werner
Sep 3 2020, 3:21 PM

Description

Importing a key with AEAD preferences with GnuPG 2.2 can lead to an array overflow. This is not trivial to exploit because the attacker can control only each second byte with the first byte being fixed at 0x04. But it can be exploited.

Affected versions are GnuPG 2.2.21 and 2.2.22. GnuPG 2.3 and versions before 2.2.21 are not affected.

Details

External Link
https://bugzilla.suse.com/show_bug.cgi?id=1176034#c5
Version
2.2.21 2.2.22

Revisions and Commits

Related Objects

Event Timeline

• werner created this object in space Restricted Space.

The fix will be in the 2.2.23 release (T5045).

• werner shifted this object from the Restricted Space space to the S1 Public space.Sep 3 2020, 6:44 PM

Small correction: The fixed byte I talked about may have the values 1, 2, 3, or 4.